fix: overflow of tables pushing content out of viewport

--- a/assets/css/components/markdown/tables.css
+++ b/assets/css/components/markdown/tables.css
@@ -1,4 +1,6 @@
 div.table-wrapper {
+  @apply w-full overflow-x-auto;
+
   &:not(:last-child) {
     @apply mb-6;
   }
